# Risk_Compliance_Review

./: .env.example  .gitignore  Dockerfile  HANDOFF_TO_NEXT_AGENT.md  IMPLEMENTATION_LOG.md  NEW_TRAPS.md  README.md  docker-compose.yml  pyproject.toml  start-8080.bat  演示资料操作流程.md
backend/app/: __init__.py  ai_clients.py  chemical_rag.py  chemistry.py  demo_cases.py  document_parser.py  factory.py  knowledge.py  main.py  models.py  pdf_render.py  reporting.py  service.py  settings.py  store.py  technology.py  vector_store.py
backend/risk_compliance_review.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_chemical_rag_demo.py  test_chemistry_registry.py  test_customer_review_flow.py  test_demo24_upload_review.py  test_demo25_task_driven_review.py  test_demo26_official_knowledge_pack.py  test_demo2_rag_stack.py  test_document_parser.py  test_golden_dataset.py  test_handoff5_local_integration.py  test_review_workflow.py  test_static_workbench.py  test_supplier_intake_demo.py  test_technology_demo.py
data_samples/chemical_rag_dataset/: manifest.json
data_samples/golden_dataset/: README.md
docs/: architecture.md  case_workbench_review_logic.md  frontend-demo-guide.md  portable-8080-guide.md  企业级合规智能体技术架构方案.md
docs/UI_v01/: 01-case-board.html  02-wizard-step1.html  03-wizard-step2.html  04-wizard-step3.html  05-wizard-step4.html  06-wizard-step5.html  07-report-default.html  08-report-drawer.html  09-report-rerun.html  10-admin-kb.html  11-admin-trace.html  (+6 more)
scripts/: build-portable-package.ps1  start-portable-8080.ps1
演示资料/: README.md  演示操作手册.md
(+155 files in other folders)
